# IdiomsSolitaire

./: .gitignore  .pre-commit-config.yaml  Dockerfile  IdiomsSolitaire.py  LICENSE  MANIFEST.in  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
idiomssolitaire/: __main__.py
